packages/webassemblyjs/test/fixtures/type-errors/wrong-set-local/module.wast
(module 
  (func $func_0 (param f32)
    (local i32)
    (set_local 1)
  )
)

